apps/argocd/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lab-gateway
      namespace: envoy-gateway-system
      sectionName: https-lab
  hostnames:
    - argocd.lab.ciliber.to
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
